# Commfy

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
python/: pyvenv.cfg
python/Scripts/: activate  activate.bat
src/session/: sessionmanager.cpp  sessionmanager.h  sessiontype.cpp  sessiontype.h
src/ui/: createnewsessiondialog.cpp  createnewsessiondialog.h  createnewsessiondialog.ui
src/util/: utilities.cpp  utilities.h
